--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 * {
     margin: 0;
+    padding: 0;
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
@@ -14,8 +19,6 @@ p {
 .first-screen__text {
     color: rgb(255, 255, 255);
 }
-
-
 
 .img2 {
     width: 400px;
@@ -35,12 +38,12 @@ h2 {
     margin: 0 auto;
 }
 
-
-
-
-
 /* Header */
 /* --- header-menu --- */
+
+.header{
+    background-color: #252527;
+}
 
 .header-menu {
     list-style-type: none;
@@ -51,13 +54,14 @@ h2 {
     padding: 40px 0px;
 }
 
-.header-menu__yellow{
-    color: green;
-    transition: 0.3s;
+.header-menu__link{
+    color: #fff;
+    cursor: pointer;
+    letter-spacing: 2px;
 }
 
-.header-menu__yellow:hover{
-    color: yellow;
+.header-menu__link:hover{
+    color: #4f93e5;
     transition: 0.3s;
 }
 
@@ -65,7 +69,7 @@ h2 {
 /* --- first-screen --- */
 
 .first-screen {
-    background-color: #116466;
+     background-color: #252527;
 }
 
 .first-screen__wrap {
@@ -77,13 +81,37 @@ h2 {
 
 }
 
+.first-screen__info p{
+    margin-bottom: 5px;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.first-screen__info h2{
+    color: #4f93e5;
+    font-size: 27px;
+    font-weight: 400;
+}
+
+.first-screen__info h1{
+    margin-bottom: 5px;
+    font-size: 45px;
+    font-weight: 400;
+}
+
 .first-screen__image{
     width: 400px;
     height: 300px;
-    border: 5px solid red;
+    border: 6px solid #4f93e5;
+    position: relative;
+    z-index: 1;
 }
 
 .first-screen__image img{ 
+    position: absolute;
+    top: 20px;
+    left: -20px;
+    z-index: 2;
     width: 100%;
     height: 100%;
 }
