--- a/style.css
+++ b/style.css
@@ -156,11 +156,22 @@ margin-top: 10px;
     padding-bottom: 30px;
 }
 
+
+
+
 /* Works */
 .works{
     background-color: #252527;
     padding-top: 30px;
     padding-bottom: 30px;
+}
+
+
+.works-body {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    row-gap: 30px;
 }
 
 .works-items__image{
@@ -170,6 +181,21 @@ margin-top: 10px;
 .works-items__image img{
     width: 100%;
 }
+
+.works-item__title {
+font-size: 20px; 
+font-weight: 700;
+color: #fff;
+}
+.works-items__link {
+    color:#fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-decoration: none;
+    
+} 
+                                                                                                            
+
 
 /* Contact */
 .contact{
@@ -183,6 +209,35 @@ margin-top: 10px;
     background-color: #252527;
     color: white;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
