--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Roboto', sans-serif;
 }
@@ -36,6 +40,7 @@ h2 {
 .container {
     max-width: 1000px;
     margin: 0 auto;
+    padding: 0 10px;
 }
 
 /* Header */
@@ -43,6 +48,12 @@ h2 {
 
 .header{
     background-color: #252527;
+}
+
+@media screen and (max-width: 490px) {
+    .header {
+        display: none;
+    }
 }
 
 .header-menu {
@@ -54,13 +65,24 @@ h2 {
     padding: 40px 0px;
 }
 
-.header-menu__link{
+@media screen and (max-width: 810px) {
+.header-menu {
+        gap: 5px;
+        padding: 30px 0px;
+        justify-content: space-between;
+    }
+}
+
+
+
+.header-menu__link a{
     color: #fff;
     cursor: pointer;
     letter-spacing: 2px;
+    text-decoration: none;
 }
 
-.header-menu__link:hover{
+.header-menu__link a:hover{
     color: #4f93e5;
     transition: 0.3s;
 }
@@ -99,12 +121,32 @@ h2 {
     font-weight: 400;
 }
 
+@media screen and (max-width: 400px) {
+.first-screen__info p {
+        font-size: 14px;
+    }
+
+    .first-screen__info h2 {
+        font-size: 23px;
+    }
+
+    .first-screen__info h1 {
+        font-size: 35px;
+    }
+}
+
 .first-screen__image{
     width: 400px;
     height: 300px;
     border: 6px solid #4f93e5;
     position: relative;
     z-index: 1;
+}
+
+@media screen and (max-width: 810px) {
+    .first-screen__image {
+        display: none;
+    }
 }
 
 .first-screen__image img{ 
@@ -168,34 +210,87 @@ margin-top: 10px;
 
 
 .works-body {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-between;
-    row-gap: 30px;
+   display: grid;
+    /* flex-wrap: wrap;
+    justify-content:space-between; */
+    gap: 20px;
+    grid-template: repeat(3, 360px) / repeat(2, 1fr);
+}
+
+@media screen and (max-width: 768px) {
+    .works-body {
+        grid-template: repeat(3, 300px) / repeat(2, 1fr);
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+.works-body {
+        grid-template: repeat(3, 250px) / repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .works-body {
+        grid-template: repeat(3, 370px) / repeat(1, 1fr);
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .works-body {
+        grid-template: repeat(3, 330px) / repeat(1, 1fr);
+    }
 }
 
 .works-items__image{
-    width: 400px;
+    width: 100%;
+    height: 300px;
+}
+
+@media screen and (max-width: 768px) {
+    .works-items__image {
+            width: 100%;
+            height: 240px;
+        }
+}
+
+@media screen and (max-width: 700px) {
+    .works-items__image {
+        width: 100%;
+        height: 195px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+.works-items__image {
+        height: 310px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .works-items__image {
+        height: 280px;
+    }
 }
 
 .works-items__image img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .works-item__title {
-font-size: 20px; 
-font-weight: 700;
-color: #fff;
+    font-size: 20px; 
+    font-weight: 700;
+    color: #fff;
 }
 .works-items__link {
     color:#fff;
     font-size: 18px;
     text-transform: uppercase;
     text-decoration: none;
-    
 } 
                                                                                                             
-
 
 /* Contact */
 .contact{
@@ -213,7 +308,15 @@ color: #fff;
 
 
 
+/* Skills */
 
+.skills__image{
+    width: 100px;
+}
+
+.skills__image img{
+    width: 100px;
+}
 
 
 
